Fix gap issue on bottom of image on some browsers

--- a/stats-preview-card-component-main/styles/style.css
+++ b/stats-preview-card-component-main/styles/style.css
@@ -11,6 +11,8 @@
 img {
   display: block;
   width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 body {
